Fix phone numbers, hide feedback forms and slides placeholder
- Replace placeholder 555 phone numbers with real RAICES hotline (1-800-354-9365) and ACLU number
- Hide feedback form sections with YOUR_FORM_ID in all 6 pages
- Hide "Slides coming soon" placeholder on contact page

--- a/news.html
+++ b/news.html
@@ -349,11 +349,10 @@
           </ul>
         </div>
 
-        <!-- Feedback -->
+        <!-- Feedback - HIDDEN FOR DEMO (restore when form is ready)
         <div>
           <h4 class="footer-heading" data-i18n="footer.feedback">Share Feedback</h4>
           <p style="font-size: 0.875rem; color: rgba(255,255,255,0.7); margin-bottom: 1rem;" data-i18n="footer.feedback.desc">Help us improve this resource for our community.</p>
-          <!-- GOOGLE FORMS: Replace YOUR_FORM_ID with your Google Form ID -->
           <a href="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform" target="_blank" rel="noopener noreferrer" class="feedback-btn" data-i18n="footer.feedback.btn">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
@@ -361,6 +360,7 @@
             Give Feedback
           </a>
         </div>
+        -->
       </div>
 
       <div class="footer-bottom">
