--- a/contact.html
+++ b/contact.html
@@ -106,6 +106,7 @@
             <!-- CANVA EMBED: Your Getting in Touch slideshow -->
             <!-- Replace YOUR_CONTACT_DESIGN_ID with your Canva embed URL -->
             <div class="slideshow-embed">
+              <!-- Slides placeholder - HIDDEN FOR DEMO
               <div class="video-placeholder" style="background: linear-gradient(135deg, var(--color-secondary) 0%, #1e4a38 100%);">
                 <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
                   <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
@@ -115,6 +116,7 @@
                 <p data-i18n="presentation.slides.soon">Slides coming soon</p>
                 <span>Add your Canva embed URL in the HTML</span>
               </div>
+              -->
               <!-- When ready, replace placeholder with:
               <iframe loading="lazy" src="https://www.canva.com/design/YOUR_CONTACT_DESIGN_ID/view?embed" frameborder="0" allowfullscreen="true" allow="fullscreen"></iframe>
               -->
@@ -306,11 +308,10 @@
           </ul>
         </div>
 
-        <!-- Feedback -->
+        <!-- Feedback - HIDDEN FOR DEMO (restore when form is ready)
         <div>
           <h4 class="footer-heading" data-i18n="footer.feedback">Share Feedback</h4>
           <p style="font-size: 0.875rem; color: rgba(255,255,255,0.7); margin-bottom: 1rem;" data-i18n="footer.feedback.desc">Help us improve this resource for our community.</p>
-          <!-- GOOGLE FORMS: Replace YOUR_FORM_ID with your Google Form ID -->
           <a href="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform" target="_blank" rel="noopener noreferrer" class="feedback-btn" data-i18n="footer.feedback.btn">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
@@ -318,6 +319,7 @@
             Give Feedback
           </a>
         </div>
+        -->
       </div>
 
       <div class="footer-bottom">
