--- a/rights.html
+++ b/rights.html
@@ -184,17 +184,17 @@
           <div class="supplementary-card supplementary-card--emergency">
             <h3 data-i18n="rights.contacts.title">Emergency Contacts</h3>
             <div class="contact-list">
-              <a href="tel:+12125551234" class="contact-item">
+              <a href="tel:+18003549365" class="contact-item">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                 </svg>
-                <span>Legal Aid: (212) 555-1234</span>
+                <span>RAICES Hotline: 1-800-354-9365</span>
               </a>
-              <a href="tel:+18003541234" class="contact-item">
+              <a href="tel:+12125491200" class="contact-item">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                 </svg>
-                <span>RAICES: 1-800-354-1234</span>
+                <span>ACLU: (212) 549-1200</span>
               </a>
             </div>
           </div>
@@ -388,11 +388,10 @@
           </ul>
         </div>
 
-        <!-- Feedback -->
+        <!-- Feedback - HIDDEN FOR DEMO (restore when form is ready)
         <div>
           <h4 class="footer-heading" data-i18n="footer.feedback">Share Feedback</h4>
           <p style="font-size: 0.875rem; color: rgba(255,255,255,0.7); margin-bottom: 1rem;" data-i18n="footer.feedback.desc">Help us improve this resource for our community.</p>
-          <!-- GOOGLE FORMS: Replace YOUR_FORM_ID with your Google Form ID -->
           <a href="https://docs.google.com/forms/d/e/YOUR_FORM_ID/viewform" target="_blank" rel="noopener noreferrer" class="feedback-btn" data-i18n="footer.feedback.btn">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
               <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
@@ -400,6 +399,7 @@
             Give Feedback
           </a>
         </div>
+        -->
       </div>
 
       <div class="footer-bottom">
