Update Contact module Canva embed on homepage

--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
               <h3 data-i18n="module.contact.title">Getting in Touch</h3>
             </div>
             <p data-i18n="module.contact.desc">Contact your elected representatives and engage with civic life. Your voice matters in shaping your community.</p>
-            <!-- CANVA EMBED: Replace with your Canva presentation embed link -->
+            <!-- CANVA EMBED: Getting in Touch slideshow -->
             <div class="module-slideshow">
-              <iframe loading="lazy" src="https://www.canva.com/design/DAG-OYUSSv8/ajJA5Fwjb4NWrtaLlbJwYQ/view?embed" frameborder="0" width="100%" height="280" allowfullscreen="true" allow="fullscreen"></iframe>
+              <iframe loading="lazy" src="https://www.canva.com/design/DAG-s7-Jbn4/6bai_-JPs53-Bgg53EdQZw/view?embed" frameborder="0" width="100%" height="280" allowfullscreen="true" allow="fullscreen"></iframe>
             </div>
             <a href="contact.html" class="module-link">Learn More &rarr;</a>
           </div>
