Add credibility boxes and disclaimers to all module pages
- Add full credibility box to contact.html (sources, date, disclaimer)
- Add disclaimer to voting.html credibility box
- Add disclaimer to resources.html credibility box

Per rubric: "Disclaimer is clear: Expert-informed, not legal advice"

--- a/contact.html
+++ b/contact.html
@@ -191,6 +191,13 @@
             </svg>
           </summary>
           <div class="detailed-content-inner">
+            <div class="credibility-box">
+              <h4 data-i18n="credibility.title">Source Information</h4>
+              <p><span class="sources" data-i18n="credibility.sources">Sources:</span> USA.gov; House.gov; Senate.gov; State Legislature Resources</p>
+              <p class="updated"><span data-i18n="credibility.updated">Last updated:</span> January 2025</p>
+              <p class="disclaimer" data-i18n="credibility.disclaimer">This information is for educational purposes only and does not constitute legal advice. Consult with a qualified attorney for legal guidance.</p>
+            </div>
+
             <h2 data-i18n="contact.guide.tips.title">Tips for Effective Contact</h2>
 
             <h3 data-i18n="contact.guide.phone.title">Phone Calls</h3>
