--- a/voting.html
+++ b/voting.html
@@ -204,6 +204,7 @@
               <h4 data-i18n="credibility.title">Source Information</h4>
               <p><span class="sources" data-i18n="credibility.sources">Sources:</span> Vote.org, State Board of Elections</p>
               <p class="updated"><span data-i18n="credibility.updated">Last updated:</span> January 2025</p>
+              <p class="disclaimer" data-i18n="credibility.disclaimer">This information is for educational purposes only and does not constitute legal advice. Consult with a qualified attorney for legal guidance.</p>
             </div>
 
             <h2 data-i18n="voting.guide.whocan.title">Who Can Register to Vote?</h2>
