--- a/resources.html
+++ b/resources.html
@@ -226,6 +226,7 @@
               <h4 data-i18n="credibility.title">Source Information</h4>
               <p><span class="attorney" data-i18n="credibility.reviewed">Reviewed by:</span> Lucia Maxwell, Esq. (OutCounsel); Villanova University VIISTA Program; ACLU Immigrants' Rights Project</p>
               <p class="updated"><span data-i18n="credibility.updated">Last updated:</span> January 2025</p>
+              <p class="disclaimer" data-i18n="credibility.disclaimer">This information is for educational purposes only and does not constitute legal advice. Consult with a qualified attorney for legal guidance.</p>
             </div>
 
             <h2 data-i18n="resources.guide.hotlines.title">Emergency Legal Hotlines</h2>
