Add missing translations for FAQ section
- Add data-i18n attributes to "Still have questions?" section
- Add English, Simplified Chinese, and Traditional Chinese translations
- Ensures full trilingual support per rubric requirement

--- a/faq.html
+++ b/faq.html
@@ -327,11 +327,11 @@
 
           <!-- Related Links -->
           <div class="section-alt" style="margin-top: 3rem; padding: 2rem; border-radius: 0.75rem;">
-            <h3>Still have questions?</h3>
-            <p>Explore our learning modules for more detailed information.</p>
+            <h3 data-i18n="faq.still.title">Still have questions?</h3>
+            <p data-i18n="faq.still.desc">Explore our learning modules for more detailed information.</p>
             <div class="action-buttons" style="margin-top: 1rem;">
-              <a href="rights.html" class="btn btn-primary">Know Your Rights</a>
-              <a href="resources.html" class="btn btn-ghost">Find Resources</a>
+              <a href="rights.html" class="btn btn-primary" data-i18n="module.rights.title">Know Your Rights</a>
+              <a href="resources.html" class="btn btn-ghost" data-i18n="faq.still.resources">Find Resources</a>
             </div>
           </div>
 
