Fix RAICES hotline phone number to 1 (800) 354-0365
Updated display text and tel: links across all pages

--- a/faq.html
+++ b/faq.html
@@ -205,7 +205,7 @@
                 <div class="faq-answer-content">
                   <p>Many organizations provide free or low-cost legal services:</p>
                   <ul>
-                    <li><strong>RAICES:</strong> 1-800-354-9365</li>
+                    <li><strong>RAICES:</strong> 1 (800) 354-0365</li>
                     <li><strong>National Immigrant Justice Center:</strong> (212) 629-6335</li>
                     <li><strong>ACLU Immigrants' Rights Project:</strong> (212) 549-1200</li>
                   </ul>
