--- a/resources.html
+++ b/resources.html
@@ -168,11 +168,11 @@
           <div class="supplementary-card supplementary-card--emergency">
             <h3 data-i18n="resources.hotlines.title">Emergency Hotlines</h3>
             <div class="contact-list">
-              <a href="tel:+18003549365" class="contact-item">
+              <a href="tel:+18003540365" class="contact-item">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                 </svg>
-                <span>RAICES: 1-800-354-9365</span>
+                <span>RAICES: 1 (800) 354-0365</span>
               </a>
               <a href="tel:+12125491200" class="contact-item">
                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -235,7 +235,7 @@
             <h2 data-i18n="resources.guide.hotlines.title">Emergency Legal Hotlines</h2>
             <p data-i18n="resources.guide.hotlines.desc">If you or someone you know needs immediate legal assistance:</p>
             <ul>
-              <li data-i18n="resources.guide.hotlines.raices"><strong>RAICES:</strong> 1-800-354-9365 - Free legal services for immigrant families</li>
+              <li data-i18n="resources.guide.hotlines.raices"><strong>RAICES:</strong> 1 (800) 354-0365 - Free legal services for immigrant families</li>
               <li data-i18n="resources.guide.hotlines.nijc"><strong>National Immigrant Justice Center:</strong> (212) 629-6335</li>
               <li data-i18n="resources.guide.hotlines.aclu"><strong>ACLU Immigrants' Rights:</strong> (212) 549-1200</li>
             </ul>
