Update footer label to Resources Consulted

--- a/resources.html
+++ b/resources.html
@@ -346,7 +346,7 @@
       </div>
 
       <div class="footer-partners">
-        <span data-i18n="footer.partners">Special thanks to:</span>
+        <span data-i18n="footer.partners">Resources Consulted:</span>
         <a href="https://www.aclu.org/issues/immigrants-rights" target="_blank" rel="noopener noreferrer" style="color: rgba(255,255,255,0.8);">ACLU Immigrants' Rights</a>
         <a href="https://www1.villanova.edu/university/law/academics/viista.html" target="_blank" rel="noopener noreferrer" style="color: rgba(255,255,255,0.8);">Villanova VIISTA</a>
         <a href="https://outcounsel.com" target="_blank" rel="noopener noreferrer" style="color: rgba(255,255,255,0.8);">OutCounsel</a>
